<resources>
    <string name="app_name">Benjamin Chege Mwangi (SCCJ/02147/2016)</string>
    <string name="home_title">Tic Tac Toe</string>
    <string name="game_version">v 0.1.0</string>
    <string name="play_button">Play</string>
    <string name="player_titles">Enter Names 🙂 </string>
    <string name="label_1">Play One</string>
    <string name="label_2">Player Two</string>
    <string name="submit">Submit ✔ </string>
    <string name="name_hint">Enter your Name</string>
    <string name="play_again_button">Play Again</string>
    <string name="home_button">Home</string>
</resources>
